# virtualOperatingSystem

./: CMakeLists.txt  ContextSwitcher.cpp  ContextSwitcher.h  Loader.cpp  Loader.h  Memory.cpp  Memory.h  PCB.h  Processor.cpp  Processor.h  README.md  Registers.cpp  Registers.h  Scheduler.cpp  Scheduler.h  main.cpp  manyJobs.txt  testJobs.txt  utils.cpp
